# mailchimp-write

./: Book1.xlsx  LICENSE  README.md  bad  mailchimp-write.yaml  people.xlsx  pyproject.toml
.github/workflows/: main.yml
mailchimp_write/: addresses.py  audience_data.py  lambda_function.py  mailchimp.py  payment.py  sync.py
