[tool.poetry]
name = "mailchimp-write"
version = "0.1.0"
description = ""
authors = ["jcable <julian.cable@yahoo.com>"]
readme = "README.md"
packages = [{include = "mailchimp_write"}]

[tool.poetry.dependencies]
python = "^3.9"
iso3166 = "^2.1.1"
mailchimp-marketing = "^3.0.80"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.118"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
